fix header on mobile

--- a/styles.scss
+++ b/styles.scss
@@ -12,7 +12,7 @@ body {
 }
 
 header {
-  padding: 2rem 0 0 2rem;
+  padding: 2rem 0 0 1rem;
 }
 
 main {
